统一生图链路逻辑